--- a/client/code-nest/public/index.html
+++ b/client/code-nest/public/index.html
@@ -11,6 +11,14 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <!-- // Custom Font -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
+
   <title>React App</title>
 </head>
 
